--- a/Fusion/src/app/nav/nav.component.html
+++ b/Fusion/src/app/nav/nav.component.html
@@ -1,35 +1,46 @@
-<nav class="navbar navbar-toggleable-md fixed-top bg">
+<nav class="navbar navbar-toggleable-md ">
   <a class="navbar-brand" href="#">
     <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
   </a>
-  <ul class="nav navbar-nav pull-right">
-    <li class="nav-item">
-      <a class="nav-link" href="">
-        <span class="fa-stack has-badge" data-count="12">
-          <i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
-        </span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="">
-        <span class="fa-stack has-badge" data-count="2">
-          <i class="fa fa-bell-o fa-lg" aria-hidden="true"></i>
-        </span>
-      </a>
-    </li>
-    <li class="nav-item">
-      <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Nicolae Cecan
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Your Profile</a>
-          <a class="dropdown-item" href="#">Settings</a>
-          <a class="dropdown-item" href="#">Log Out</a>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+    </ul>
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link" href="">
+          <span class="fa-stack has-badge" data-count="12">
+            <i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
+          </span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="">
+          <span class="fa-stack has-badge" data-count="2">
+            <i class="fa fa-bell-o fa-lg" aria-hidden="true"></i>
+          </span>
+        </a>
+      </li>
+      <li class="nav-item">
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Nicolae Cecan
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">Your Profile</a>
+            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" href="#">Log Out</a>
+          </div>
         </div>
-      </div>
-    </li>
-  </ul>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+<nav class="navbar navbar-toggleable-md fixed-top bg">
+  
+
 </nav>  
 
 <div id="side-nav" class="side-nav">
