--- a/Fusion/src/app/nav/nav.component.css
+++ b/Fusion/src/app/nav/nav.component.css
@@ -1,30 +1,40 @@
 .btn.btn-secondary.dropdown-toggle{
   border: transparent;
 }
-.fa-stack[data-count]:after{
-  position:absolute;
-  right: -15%;
-  top:1%;
-  content: attr(data-count);
-  font-size: 60%;
-  padding:.6em;
-  border-radius:999px;
-  line-height:.75em;
-  color: white;
-  background: #6a5acd;
-  text-align:center;
-  min-width:2em;
-  font-weight:bold;
+.badge-mail {
+   background: #6a5acd;
+   border-radius:999px;
+   position: relative;
+   top: -10px;
+   left: -10px;
+}
+.badge-notify {
+   background: #D26E8C;
+   border-radius:999px;
+   position: relative;
+   top: -10px;
+   left: -11px;
 }
 .side-nav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+.navbar-brand {
+  padding: 0 0 0 10px;
+}
+img {
+  border-radius: 0px;
+  height: 40px; 
+  margin: 5px 3px 5px 3px;
+  position: absolute;
+  width: 40px;
+  top: 0;
 }
