--- a/Fusion/src/app/nav/nav.component.html
+++ b/Fusion/src/app/nav/nav.component.html
@@ -1,29 +1,32 @@
-<nav class="navbar navbar-toggleable-md ">
-  <a class="navbar-brand" href="#">
+<nav class="navbar navbar-toggleable-md">
+  <a class="navbar-brand" href="#" 
+     (click)="openNav()">
     <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
   </a>
-
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-md-0">
     </ul>
     <ul class="nav">
       <li class="nav-item">
         <a class="nav-link" href="">
-          <span class="fa-stack has-badge" data-count="12">
-            <i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
-          </span>
+          <i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>
+          <span class="badge badge-mail">12</span>
         </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="">
-          <span class="fa-stack has-badge" data-count="2">
-            <i class="fa fa-bell-o fa-lg" aria-hidden="true"></i>
-          </span>
+          <i class="fa fa-bell-o fa-lg" aria-hidden="true"></i>
+          <span class="badge badge-notify">3</span>
         </a>
       </li>
       <li class="nav-item">
         <div class="dropdown">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" 
+                  type="button" 
+                  id="dropdownMenuButton" 
+                  data-toggle="dropdown" 
+                  aria-haspopup="true" 
+                  aria-expanded="false">
             Nicolae Cecan
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -37,12 +40,6 @@
   </div>
 </nav>
 
-
-<nav class="navbar navbar-toggleable-md fixed-top bg">
-  
-
-</nav>  
-
-<div id="side-nav" class="side-nav">
+<div id="side-nav" class="side-nav" [ngStyle]="displaySideNav">
   <img src="" alt="image" class="img-thumbnail">
 </div>
