Added Pics and Refactor
Added an image and fix some layouts

--- a/Fusion/src/app/nav/nav.component.html
+++ b/Fusion/src/app/nav/nav.component.html
@@ -22,14 +22,14 @@
       <li class="nav-item">
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" 
-                  type="button" 
-                  id="dropdownMenuButton" 
+                  type="button"
                   data-toggle="dropdown" 
                   aria-haspopup="true" 
                   aria-expanded="false">
             Nicolae Cecan
           </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Your Profile</a>
             <a class="dropdown-item" href="#">Settings</a>
             <a class="dropdown-item" href="#">Log Out</a>
@@ -39,7 +39,6 @@
     </ul>
   </div>
 </nav>
-
 <div id="side-nav" class="side-nav" [ngStyle]="displaySideNav">
-  <img src="" alt="image" class="img-thumbnail">
+  <img src="../assets/Alt.png" alt="image" class="img-thumbnail">
 </div>
