--- a/Fusion/src/app/nav/nav.component.html
+++ b/Fusion/src/app/nav/nav.component.html
@@ -20,15 +20,16 @@
         </a>
       </li>
       <li class="nav-item">
-        <div class="dropdown">
+        <div class="dropdown" dropdown>
           <button class="btn btn-secondary dropdown-toggle" 
                   type="button"
                   data-toggle="dropdown" 
                   aria-haspopup="true" 
-                  aria-expanded="false">
+                  aria-expanded="false"
+                  dropdownToggle>
             Nicolae Cecan
           </button>
-          <div class="dropdown-menu">
+          <div class="dropdown-menu" *dropdownMenu>
             <a class="dropdown-item" href="#">Action</a>
             <a class="dropdown-item" href="#">Your Profile</a>
             <a class="dropdown-item" href="#">Settings</a>
